Improve Docker files